--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ twitt:<a href="https://twitter.com/Lost_in_Tropez" target="_blank">
     <!-- Image and text -->
 <div class="front-block">
 
-  <!-- <div class="container"> -->
+  <div class="g-container">
 
     <div class="box">
 
@@ -96,7 +96,7 @@ twitt:<a href="https://twitter.com/Lost_in_Tropez" target="_blank">
 
       
     </div>
-  <!-- </div> -->
+  </div>
 </div>
 
 
