--- a/index.html
+++ b/index.html
@@ -29,18 +29,22 @@
   
   <div class="icon-bar">
 
-    <a href="https://soundcloud.com/lost-in-tropez" class="soundcloud" target="_blank"><i class="fa fa-soundcloud" ></i></a>
+<!--      These classes can be used to give the icon actual bg color Use
+            class="twitter" /facebook/instagram/soundcloud
+. I liked the transparent ones -->
+    <a href="https://soundcloud.com/lost-in-tropez" class="clear" target="_blank"><i class="fa fa-soundcloud" ></i></a>
 
-    <a href="https://www.instagram.com/lostintropez/" class="instagram" target="_blank"><i class="fa fa-instagram"></i></a>
-    <a href="https://twitter.com/Lost_in_Tropez" class="twitter" target="_blank"><i class="fa fa-twitter" ></i></a>
-    <!-- <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a> -->
-    <a href="https://www.youtube.com/channel/UCx5s_zmopTz0uiNgxQgfo0Q" class="youtube" target="_blank"><i class="fa fa-youtube"></i></a>
+    <a href="https://www.instagram.com/lostintropez/" class="clear" target="_blank"><i class="fa fa-instagram"></i></a>
+    <a href="https://twitter.com/Lost_in_Tropez" class="clear" target="_blank"><i class="fa fa-twitter" ></i></a>
+     <a href="https://open.spotify.com/track/4hOzliwKHhh1eDnWinftXf?si=IWwArvsWTG-rhI5I5E2EXA" class="clear"><i class="fa fa-spotify"></i></a>
+    <a href="https://www.youtube.com/channel/UCx5s_zmopTz0uiNgxQgfo0Q" class="clear" target="_blank"><i class="fa fa-youtube"></i></a>
   </div>
 
 <div class="sc-banner">
 
  <!-- to do add this iframe right-->
- <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/768377158&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+    <iframe src="https://open.spotify.com/embed/album/43e8tvF9mZIQg9dUKMFqbi" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<!-- <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/768377158&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>-->
  <!-- <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/769300003&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe> -->
   </div>
 
