fixing spotify new tab

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <a href="https://www.instagram.com/lostintropez/" class="clear" target="_blank"><i class="fa fa-instagram"></i></a>
     <a href="https://twitter.com/Lost_in_Tropez" class="clear" target="_blank"><i class="fa fa-twitter" ></i></a>
-     <a href="https://open.spotify.com/track/4hOzliwKHhh1eDnWinftXf?si=IWwArvsWTG-rhI5I5E2EXA" class="clear"><i class="fa fa-spotify"></i></a>
+     <a href="https://open.spotify.com/track/4hOzliwKHhh1eDnWinftXf?si=IWwArvsWTG-rhI5I5E2EXA" class="clear" target="_blank"><i class="fa fa-spotify"></i></a>
     <a href="https://www.youtube.com/channel/UCx5s_zmopTz0uiNgxQgfo0Q" class="clear" target="_blank"><i class="fa fa-youtube"></i></a>
   </div>
 
