--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
 
         <div class="g-container">
       
-          <div class="box">
+          <div class="box-blog">
 
 
             <div class = "blog-letter-links">
