--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
      <a href="https://open.spotify.com/track/4hOzliwKHhh1eDnWinftXf?si=IWwArvsWTG-rhI5I5E2EXA" class="clear" target="_blank"><i class="fa fa-spotify"></i></a>
     <a href="https://www.youtube.com/channel/UCx5s_zmopTz0uiNgxQgfo0Q" class="clear" target="_blank"><i class="fa fa-youtube"></i></a>
     <a href="https://lost-in-tropez.bandcamp.com/" class="clear" target="_blank"><i class="fa fa-bandcamp"></i></a>
-    <a href="blog.html" class = "blog-button">25:52</a>
+    <a href="epk.html" class = "blog-button">25:52</a>
   </div>
 
 <div class="sc-banner">
