cleaning up scroll

--- a/epk.html
+++ b/epk.html
@@ -55,10 +55,7 @@
     <div class="front-block-blog">
       
           <!-- <div class="box-blog"> -->
-            <h4 class="epk-display"><br><br>
-              Lost
-             In
-            Tropez</h4>
+
 
             <div class = "blog-letter-links">
 
@@ -83,6 +80,11 @@
                         <br>
                         <br>
                         <b>
+                            Lost
+                           In
+                          Tropez
+                          <br><br>
+
                           The seeds of Lost in Tropez’ indie-dance sound – sometimes whimsical and
                           sometimes gritty – took root in the southern California beaches where they met in school. 
                           <br><br>
