--- a/epk.html
+++ b/epk.html
@@ -85,28 +85,28 @@
                           Tropez
                           <br><br>
 
-                          The seeds of Lost in Tropez’ indie-dance sound – sometimes whimsical and
-                          sometimes gritty – took root in the southern California beaches where they met in school. 
+                          The seeds of Lost in Tropez’ indie dance sound – sometimes whimsical and
+                          sometimes gritty – took root in the Southern California beaches where they met in school. 
                           <br><br>
-                          The Southern California artist’s background in guitar and piano evolved into electronic production as they dialed in on a sound together.
-                          The juxtapositions of Lost in Tropez with the music that inspire Ope songs, like the driving melodies of deep house, 
-                          or the intense trap sounds brough in by RC highlight how different sounds and artists can create something new entirely.
+                          The artist’s background in guitar and piano evolved into electronic production as they dialed in on a sound together.
+                          The juxtapositions of Lost in Tropez with the music that inspire Ope, like the driving melodies of deep house, 
+                          or the intense trap beats brought in by RC highlight how different artists can come together and create something new entirely.
                           <br><br>
                           Their first full length album, 25:52, was inspired while the two artists explored San Diego's music scene. The freedom of travel, and the solitude of nature and connection with an audience,
-                          weave rich storylines into their melodies and samples. Many of the songs on their first studio EP, Ocean Vies, released in fall 2019, were written and recorded off an iphone and childhood guitar.
+                          weave rich storylines into their melodies and lyrics. Many of the songs on their first studio EP, Ocean Views, released in fall 2018, were written and recorded off an iphone and childhood guitar.
                           25:52 is the result of continual progress as the artists explored a new sound together that they have yet to hear in mainstream EDM.
                           <br><br>
                           Turquoise, one of the album’s driving guitar tracks, reflects on Ope's
                           journey to the OC to rejoin RC and get back in the studio. The two friends climbed onto the roof of RC's appartment with a laptop, keyboard
-                          and guitar and quickly made what became on of their best tracks to date.
+                          and guitar and quickly made what became one of their favorite tracks to date.
                           <br><br>
                           The album’s first single, Pieces, was inspired by Polo and Pan, among others like Moderat, The Avalanches, and Romy. 
                           <br><br>
-                          Their newest and last single before the album is Junak. Junak is the result of a continual feedback loop as the artists ripped, gutted, and built the track 10 times over.
+                          Junak is the newest and last single before the album is released. Junak is the result of a continual feedback loop as the artists ripped, gutted, and built the track 10 times over.
                           They are proud to release Junak as it combines cultures and sounds from Northern, Central and South America - 
-                          bringing people together with music is their favorite aspect of it, in both the production and listening aspects.
+                          bringing people together with music in both the production and listening is what they strive for.
                           <br><br>
-                          Now the two manage to juggle full time careers, music, and graduate school with the intention of pouring more and more time towards making music.
+                          Now the two juggle full time careers, music, and graduate school with the intention of pouring more time towards music.
                           Over the next year, that includes playing shows, setting up a tour, and getting back into the
                           studio to record their second full-length album.
                         <br><br>
