updating epk bio

--- a/epk.html
+++ b/epk.html
@@ -85,31 +85,30 @@
                            In
                           Tropez
                           <br><br>
-
-                          The seeds of Lost in Tropez’ indie dance sound – sometimes whimsical and
-                          sometimes gritty – took root in the Southern California beaches where they met in school. 
+                          Lost in Tropez is an indie dance duo whose captivating sound seamlessly blends whimsical and gritty elements.
+                          Their journey began on the sun-soaked beaches of Southern California, where Glenn and Arsalan crossed paths during their school days. 
+                          Drawing on their backgrounds in guitar and piano, they ventured into the realm of electronic production, honing their craft and forging a unique sonic identity together.
                           <br><br>
-                          The artist’s background in guitar and piano evolved into electronic production as they dialed in on a sound together.
-                          The juxtapositions of Lost in Tropez with the music that inspire Ope, like the driving melodies of deep house, 
-                          or the intense trap beats brought in by RC highlight how different artists can come together and create something new entirely.
+                          Lost in Tropez finds inspiration in a diverse range of musical influences, from the driving melodies of deep house to intense trap beats introduced. 
+                          This artistic juxtaposition highlights the power of collaboration, as these individual inspirations converge to create something entirely new. 
+                          Their latest release, "Pieces," was born from the duo's exploration of San Diego's vibrant music scene, capturing the essence of freedom, solitude, and connection with their audience.
                           <br><br>
-                          Their first full length album, 25:52, was inspired while the two artists explored San Diego's music scene. The freedom of travel, and the solitude of nature and connection with an audience,
-                          weave rich storylines into their melodies and lyrics. Many of the songs on their first studio EP, Ocean Views, released in fall 2018, were written and recorded off an iphone and childhood guitar.
-                          25:52 is the result of continual progress as the artists explored a new sound together that they have yet to hear in mainstream EDM.
+                          With their debut studio EP, "Ocean Views," Lost in Tropez demonstrated their ability to craft compelling melodies and lyrics. 
+                          Many of the songs on this record were written and recorded using just an iPhone and a childhood guitar, 
+                          showcasing their unwavering dedication to their art. 
+                          "Pieces" represents a significant evolution in their sound, as they continue to push boundaries and pioneer a fresh approach to mainstream EDM.
                           <br><br>
-                          Turquoise, one of the album’s driving guitar tracks, reflects on Ope's
-                          journey to the OC to rejoin RC and get back in the studio. The two friends climbed onto the roof of RC's appartment with a laptop, keyboard
-                          and guitar and quickly made what became one of their favorite tracks to date.
+                          The enchanting track "Turquoise" stands out as a guitar-driven gem on the EP, recounting Ope's journey to reunite with RC and reignite their creative spark. 
+                          It was during this pivotal moment that the duo found themselves perched on the rooftop of RC's apartment, armed with a laptop, keyboard, and guitar. 
+                          The result was a sonic masterpiece and one of their proudest achievements to date.
                           <br><br>
-                          The album’s first single, Pieces, was inspired by Polo and Pan, among others like Moderat, The Avalanches, and Romy. 
+                          "Pieces," the EP's lead single, draws inspiration from musical luminaries such as Polo and Pan, The Avalanches, and Romy. 
+                          The track serves as a testament to Lost in Tropez's ability to blend cultures and sounds from North, Central, and South America, fostering unity through their music both in its creation and consumption. 
                           <br><br>
-                          Junak is the newest and last single before the album is released. Junak is the result of a continual feedback loop as the artists ripped, gutted, and built the track 10 times over.
-                          They are proud to release Junak as it combines cultures and sounds from Northern, Central and South America - 
-                          bringing people together with music in both the production and listening is what they strive for.
-                          <br><br>
-                          Now the two juggle full time careers, music, and graduate school with the intention of pouring more time towards music.
-                          Over the next year, that includes playing shows, setting up a tour, and getting back into the
-                          studio to record their second full-length album.
+                          While juggling full-time careers, music, and graduate school, Lost in Tropez remains committed to dedicating more time and energy to their craft. 
+                          Their plans for the upcoming year include captivating live performances, organizing a tour, 
+                          and returning to the studio to record their highly anticipated second full-length album. 
+                          Stay tuned as Lost in Tropez continues to craft a sonic landscape that transcends boundaries and captivates listeners worldwide.
                         <br><br>
                         </b>
                     </p>
