--- a/epk.html
+++ b/epk.html
@@ -89,7 +89,7 @@
                           Their journey began on the sun-soaked beaches of Southern California, where Glenn and Arsalan crossed paths during their school days. 
                           Drawing on their backgrounds in guitar and piano, they ventured into the realm of electronic production, honing their craft and forging a unique sonic identity together.
                           <br><br>
-                          Lost in Tropez finds inspiration in a diverse range of musical influences, from the driving melodies of deep house to intense trap beats introduced. 
+                          Lost in Tropez finds inspiration in a diverse range of musical influences, from the driving melodies of deep house to intense trap beats. 
                           This artistic juxtaposition highlights the power of collaboration, as these individual inspirations converge to create something entirely new. 
                           Their latest release, "Pieces," was born from the duo's exploration of San Diego's vibrant music scene, capturing the essence of freedom, solitude, and connection with their audience.
                           <br><br>
