--- a/epk.html
+++ b/epk.html
@@ -98,11 +98,11 @@
                           showcasing their unwavering dedication to their art. 
                           "Pieces" represents a significant evolution in their sound, as they continue to push boundaries and pioneer a fresh approach to mainstream EDM.
                           <br><br>
-                          The enchanting track "Turquoise" stands out as a guitar-driven gem on the EP, recounting Ope's journey to reunite with RC and reignite their creative spark. 
+                          The enchanting track "Pero te Dije" stands out as a guitar-driven gem on the EP, recounting Ope's journey to reunite with RC and reignite their creative spark. 
                           It was during this pivotal moment that the duo found themselves perched on the rooftop of RC's apartment, armed with a laptop, keyboard, and guitar. 
                           The result was a sonic masterpiece and one of their proudest achievements to date.
                           <br><br>
-                          "Pieces," the EP's lead single, draws inspiration from musical luminaries such as Polo and Pan, The Avalanches, and Romy. 
+                          "Pieces" the EP's lead single, draws inspiration from musical luminaries such as Polo and Pan, The Avalanches, and Romy. 
                           The track serves as a testament to Lost in Tropez's ability to blend cultures and sounds from North, Central, and South America, fostering unity through their music both in its creation and consumption. 
                           <br><br>
                           While juggling full-time careers, music, and graduate school, Lost in Tropez remains committed to dedicating more time and energy to their craft. 
