--- a/epk.html
+++ b/epk.html
@@ -98,8 +98,8 @@
                           showcasing their unwavering dedication to their art. 
                           "Pieces" represents a significant evolution in their sound, as they continue to push boundaries and pioneer a fresh approach to mainstream EDM.
                           <br><br>
-                          The enchanting track "Pero te Dije" stands out as a guitar-driven gem on the EP, recounting Glenn's journey to reunite with RC and reignite their creative spark. 
-                          It was during this pivotal moment that the duo found themselves perched on the rooftop of RC's apartment, armed with a laptop, keyboard, and guitar. 
+                          The enchanting track "Pero te Dije" stands out as a guitar-driven gem on the EP, recounting Glenn's journey to reunite with Arsalan and reignite their creative spark. 
+                          It was during this pivotal moment that the duo found themselves perched on the rooftop of Arsalan's apartment, armed with a laptop, keyboard, and guitar. 
                           The result was a sonic masterpiece and one of their proudest achievements to date.
                           <br><br>
                           "Pieces" the EP's lead single, draws inspiration from musical luminaries such as Polo and Pan, The Avalanches, and Romy. 
