last one i think

--- a/epk.html
+++ b/epk.html
@@ -107,7 +107,7 @@
                           <br><br>
                           While juggling full-time careers, music, and graduate school, Lost in Tropez remains committed to dedicating more time and energy to their craft. 
                           Their plans for the upcoming year include captivating live performances, organizing a tour, 
-                          and returning to the studio to record their highly anticipated second full-length album. 
+                          and returning to the studio to record their highly anticipated first full-length album. 
                           Stay tuned as Lost in Tropez continues to craft a sonic landscape that transcends boundaries and captivates listeners worldwide.
                         <br><br>
                         </b>
